@@ -1,5 +1,9 @@
 2005-03-07  Sam Steingold  <sds@gnu.org>
 
+	* m4/regexp.m4 (CL_REGEXP): added AC_ARG_WITH and some more tests
+
+2005-03-07  Sam Steingold  <sds@gnu.org>
+
 	* modules/syscalls/configure.in: use AC_FUNC_CHOWN
 
 2005-03-07  Sam Steingold  <sds@gnu.org>
